# FastAPI-Cookiecutter

./: .dockerignore  .drone.yml  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  test.sh
{{cookiecutter.project_directory}}/: .drone.yml  Dockerfile  Makefile  README.md  doc_generator.py  docker-compose.yaml  pyproject.toml  pytest.ini
{{cookiecutter.project_directory}}/app/: __init__.py  config.py  containers.py  db.py  doc_generator.py  main.py  middleware.py  pre_start.py
{{cookiecutter.project_directory}}/app/broker/: __init__.py  tasks.py
{{cookiecutter.project_directory}}/app/routers/: __init__.py  auth.py
{{cookiecutter.project_directory}}/app/schemas/: __init__.py  auth.py  generic.py
{{cookiecutter.project_directory}}/app/services/: __init__.py  auth.py  httpx.py  log.py  user.py
{{cookiecutter.project_directory}}/env/: .cookiecutter.env  .example.env
{{cookiecutter.project_directory}}/pre_start/: check_connection.py
{{cookiecutter.project_directory}}/script/: service_entrypoint.sh
{{cookiecutter.project_directory}}/tests/: conftest.py
{{cookiecutter.project_directory}}/tests/broker/: test_health_check.py
{{cookiecutter.project_directory}}/tests/routers/: test_health.py
